# riolu

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  LICENSE  README.md  config.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
commands/: fun.py  image.py
utils/: fake_nitro.txt
