[tool.poetry]
name = "Riolu"
version = "2.0"
description = "A discord bot with some fun commands. Also using pycord."
authors = ["Tibor Mercs <tibormercs8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
py-cord = "^2.1.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"