[tool.poetry]
name = "Riolu"
version = "2.0"
description = "An another discord bot for friends, with some fun commands."
authors = ["Tibor Mercs <tibormercs8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
replit = "^3.2.4"
py-cord = "^2.1.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"